# Mafia2.0

./: .gitignore  README.md  pyproject.toml
.history/: pubspec_20260429133704.yaml  pubspec_20260429134954.yaml  pubspec_20260429143058.yaml  pubspec_20260429143100.yaml  pubspec_20260429143103.yaml  pubspec_20260429143107.yaml  pubspec_20260429143108.yaml  pubspec_20260502221438.yaml  pubspec_20260502221454.yaml  pubspec_20260502221456.yaml  pubspec_20260505110938.yaml  pubspec_20260505110940.yaml  pubspec_20260505110949.yaml  pubspec_20260505110959.yaml  pubspec_20260505111005.yaml  pubspec_20260505111006.yaml  pubspec_20260505111009.yaml  pubspec_20260505111013.yaml  pubspec_20260505111014.yaml  pubspec_20260505111017.yaml  pubspec_20260505111018.yaml  pubspec_20260505114722.yaml  pubspec_20260505114723.yaml  pubspec_20260505114725.yaml
.history/lib/: app_20260506130613.dart  hive_registrar.g_20260430220846.dart  hive_registrar.g_20260430220901.dart  hive_registrar.g_20260430220904.dart  hive_registrar.g_20260504100713.dart  main_20260430093248.dart  main_20260430093546.dart  main_20260430093551.dart  main_20260430093555.dart  main_20260430093827.dart  main_20260430102925.dart  main_20260430103018.dart  main_20260430103019.dart  main_20260430103022.dart  main_20260430104059.dart  main_20260430104100.dart  main_20260430104108.dart  main_20260430104319.dart  main_20260430104425.dart  main_20260430104428.dart  (+31 more)
lib/: hive_registrar.g.dart  main.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+760 files in other folders)
