[tool.poetry]
name = "mafia2-0"
version = "0.1.0"
description = ""
authors = ["GazinurDavletbaev <gyxtochka@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mafia2"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
